Update Main class in POM

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
           <configuration>
             <archive>
               <manifest>
-                <mainClass>Form</mainClass>
+                <mainClass>Main</mainClass>
               </manifest>
             </archive>
           </configuration>
