--- a/pom.xml
+++ b/pom.xml
@@ -43,22 +43,12 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
-        <plugin>
+        <!--plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>3.3.0</version>
-          <configuration>
-            <archive>
-              <manifest>
-                <mainClass>com.calc.jenk.Main</mainClass>
-              </manifest>
-              <manifestEntries>
-                <Application-Version>1.0</Application-Version>
-                <Built-By>MateoAgudGarcia</Built-By>
-              </manifestEntries>
-            </archive>
-          </configuration>
 
-        </plugin>
+
+        </plugin-->
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
@@ -75,6 +65,18 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifestFile>src/main/resources/MANIFEST.MF</manifestFile>
+              <manifest>
+                <mainClass>com.calc.jenk.Main</mainClass>
+              </manifest>
+              <manifestEntries>
+                <Application-Version>1.0</Application-Version>
+                <Built-By>MateoAgudGarcia</Built-By>
+              </manifestEntries>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
